--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -16,7 +16,7 @@
     font-size: 1.2em;
     color: #202020;
     text-decoration: none;
-    background-color: #faff5a;
+    background-color: #1e49e2;
 }
 
 #form{
