--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -94,8 +94,9 @@ ul li {
     position: relative;
     float: left;
     width: 100%;
-    height: 100px;
-    border-bottom: 1px solid #333;
+    height: 120
+    px;
+
 }
 
 ul li input[type=radio] {
@@ -181,3 +182,44 @@ input[type=radio]:checked~.text-primary {
     margin-top: 0.5em; /* Add some space above the subtitle */
     margin-bottom: 0.5em; /* Add some space below the subtitle */
 }
+
+:root {
+    --primary-color: #3a00db;
+    --secondary-color: #cecece;
+    --dark-color: #222222;
+    --light-color: #f0f0f0;
+}
+
+/* Feedback styling */
+.feedback {
+    padding: 5px;
+    text-align: match-parent;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    margin-left: 5px;
+    max-width: max-content; /* Set a max width for readability */
+    border: 1px solid var(--secondary-color);
+}
+
+.correct-feedback {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.incorrect-feedback {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+.subtitle {
+    font-size: 1.1em;
+    text-align: match-parent;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+}
+
+
+
+
